// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart should render 1`] = `
<div>
  <div
    class="VictoryContainer"
    style="height: 100%; width: 100%; user-select: none; pointer-events: none; position: relative;"
  >
    <svg
      height="400"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 400 400"
      width="400"
    >
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: #90A4AE; stroke-width: 0; fill: transparent; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="30"
          x2="30"
          y1="30"
          y2="370"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="321.42857142857144"
            y2="321.42857142857144"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="321.42857142857144"
            y2="321.42857142857144"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-0"
            x="22"
            y="325.68857142857144"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            >
              200
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="272.85714285714283"
            y2="272.85714285714283"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="272.85714285714283"
            y2="272.85714285714283"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-1"
            x="22"
            y="277.1171428571428"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            >
              400
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="224.28571428571428"
            y2="224.28571428571428"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="224.28571428571428"
            y2="224.28571428571428"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-2"
            x="22"
            y="228.54571428571427"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            >
              600
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="175.71428571428572"
            y2="175.71428571428572"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="175.71428571428572"
            y2="175.71428571428572"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-3"
            x="22"
            y="179.9742857142857"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            >
              800
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="127.14285714285714"
            y2="127.14285714285714"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="127.14285714285714"
            y2="127.14285714285714"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-4"
            x="22"
            y="131.40285714285713"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            >
              1k
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="78.57142857142858"
            y2="78.57142857142858"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="78.57142857142858"
            y2="78.57142857142858"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-5"
            x="22"
            y="82.83142857142859"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            >
              1.2k
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="30"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="30"
            y2="30"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-6"
            x="22"
            y="34.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            >
              1.4k
            </tspan>
          </text>
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: #eceff1; stroke-width: 1; fill: transparent; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="30"
          x2="380"
          y1="370"
          y2="370"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: none; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="15"
            id="chart-axis-1-tickLabels-0"
            x="30"
            y="388.26"
          >
            <tspan
              dx="15"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="30"
            >
              2020-12-16T00:00:00-03:00
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: block; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="80"
            x2="80"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="80"
            x2="80"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-1"
            x="80"
            y="388.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="80"
            >
              2020-12-15T00:00:00-03:00
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: block; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="130"
            x2="130"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="130"
            x2="130"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-2"
            x="130"
            y="388.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="130"
            >
              2020-12-14T00:00:00-03:00
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: block; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="180"
            x2="180"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="180"
            x2="180"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-3"
            x="180"
            y="388.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="180"
            >
              2020-12-13T00:00:00-03:00
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: block; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="230"
            x2="230"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="230"
            x2="230"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-4"
            x="230"
            y="388.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="230"
            >
              2020-12-12T00:00:00-03:00
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: block; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="280"
            x2="280"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="280"
            x2="280"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-5"
            x="280"
            y="388.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="280"
            >
              2020-12-11T00:00:00-03:00
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: block; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="330"
            x2="330"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="330"
            x2="330"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-6"
            x="330"
            y="388.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="330"
            >
              2020-12-10T00:00:00-03:00
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: none; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="380"
            x2="380"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="380"
            x2="380"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="-20"
            id="chart-axis-1-tickLabels-7"
            x="380"
            y="388.26"
          >
            <tspan
              dx="-20"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="380"
            >
              2020-12-09T00:00:00-03:00
            </tspan>
          </text>
        </g>
      </g>
      <g
        clip-path="url(#victory-clip-2)"
        style="height: 100%; width: 100%; user-select: none;"
      >
        <defs>
          <clippath
            id="victory-clip-2"
          >
            <rect
              height="340"
              vector-effect="non-scaling-stroke"
              width="350"
              x="30"
              y="30"
            />
          </clippath>
        </defs>
        <path
          d="M30,369.75714285714287L80,369.51428571428573L130,370L180,368.7857142857143L230,370L280,369.51428571428573L330,370L380,369.75714285714287L380,30"
          role="presentation"
          shape-rendering="auto"
          style="fill: transparent; stroke: #455A64; opacity: 1; stroke-width: 2;"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="400"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 400 400"
        width="400"
      />
    </div>
  </div>
</div>
`;

exports[`LineChart should render empty 1`] = `
<div>
  <div
    class="VictoryContainer"
    style="height: 100%; width: 100%; user-select: none; pointer-events: none; position: relative;"
  >
    <svg
      height="400"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 400 400"
      width="400"
    >
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: #90A4AE; stroke-width: 0; fill: transparent; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="30"
          x2="30"
          y1="30"
          y2="370"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="302"
            y2="302"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="302"
            y2="302"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-0"
            x="22"
            y="306.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            />
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="234"
            y2="234"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="234"
            y2="234"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-1"
            x="22"
            y="238.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            />
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="166"
            y2="166"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="166"
            y2="166"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-2"
            x="22"
            y="170.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            />
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="97.99999999999999"
            y2="97.99999999999999"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="97.99999999999999"
            y2="97.99999999999999"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-3"
            x="22"
            y="102.25999999999999"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            />
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="380"
            y1="30"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="30"
            x2="30"
            y1="30"
            y2="30"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-4"
            x="22"
            y="34.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="end"
              x="22"
            />
          </text>
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: #eceff1; stroke-width: 1; fill: transparent; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="30"
          x2="380"
          y1="370"
          y2="370"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: none; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="100"
            x2="100"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="100"
            x2="100"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="15"
            id="chart-axis-1-tickLabels-0"
            x="100"
            y="388.26"
          >
            <tspan
              dx="15"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="100"
            >
              0.2
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: block; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="170"
            x2="170"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="170"
            x2="170"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-1"
            x="170"
            y="388.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="170"
            >
              0.4
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: block; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="240"
            x2="240"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="240"
            x2="240"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-2"
            x="240"
            y="388.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="240"
            >
              0.6
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: block; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="310"
            x2="310"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="310"
            x2="310"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-3"
            x="310"
            y="388.26"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="310"
            >
              0.8
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #ECEFF1; stroke-dasharray: 1; stroke-width: 1; display: none; fill: none; stroke-linecap: round; stroke-linejoin: round; pointer-events: painted;"
            vector-effect="non-scaling-stroke"
            x1="380"
            x2="380"
            y1="370"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: white; size: 0; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="380"
            x2="380"
            y1="370"
            y2="370"
          />
          <text
            direction="inherit"
            dx="-20"
            id="chart-axis-1-tickLabels-4"
            x="380"
            y="388.26"
          >
            <tspan
              dx="-20"
              dy="0"
              style="font-size: 12px; fill: #878787; dominant-baseline: hanging; display: block; font-family: 'Helvetica Neue', 'Helvetica', sans-serif; letter-spacing: normal; padding: 8px; stroke: transparent; stroke-width: 0;"
              text-anchor="middle"
              x="380"
            >
              1.0
            </tspan>
          </text>
        </g>
      </g>
      <g
        clip-path="url(#victory-clip-4)"
        style="height: 100%; width: 100%; user-select: none;"
      >
        <defs>
          <clippath
            id="victory-clip-4"
          >
            <rect
              height="340"
              vector-effect="non-scaling-stroke"
              width="350"
              x="30"
              y="30"
            />
          </clippath>
        </defs>
        <path
          role="presentation"
          shape-rendering="auto"
          style="fill: transparent; stroke: #455A64; opacity: 1; stroke-width: 2;"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="400"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 400 400"
        width="400"
      />
    </div>
  </div>
</div>
`;

exports[`LineChart should render skeleton 1`] = `
<div>
  <div
    class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-wave"
    style="width: 99%; height: 100%;"
  />
</div>
`;
